<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="todo" type="id.ac.ubaya.informatika.a160418055_todoapp.model.Todo" />
        <variable name="radioListener" type="id.ac.ubaya.informatika.a160418055_todoapp.view.RadioClickListener" />
        <variable name="listener" type="id.ac.ubaya.informatika.a160418055_todoapp.view.TodoSaveChangesListener" />
    </data>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.CreateTodoFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/enternotes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputTitle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtNotes"
                    android:text="@={todo.notes}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/todotitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtJudulTodo">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtTitle"
                    android:text="@={todo.title}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txtJudulTodo"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/edittodo"
                android:textSize="36sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnAddTodo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:onClick="@{(view) -> listener.onTodoSaveChanges(view, todo)}"
                android:text="@string/savechanges"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/priority"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputNotes" />

            <RadioGroup
                android:id="@+id/radioGroupPriority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <RadioButton
                    android:id="@+id/radioHigh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="@{todo.priority==3?true:false}"
                    android:onClick="@{(view) -> radioListener.onRadioClick(view,3, todo)}"
                    android:tag="3"
                    android:text="@string/highpriority" />

                <RadioButton
                    android:id="@+id/radioMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="@{todo.priority==2?true:false}"
                    android:onClick="@{(view) -> radioListener.onRadioClick(view,2, todo)}"
                    android:tag="2"
                    android:text="@string/mediumpriority" />

                <RadioButton
                    android:id="@+id/radioLow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="@{todo.priority==1?true:false}"
                    android:onClick="@{(view) -> radioListener.onRadioClick(view,1, todo)}"
                    android:tag="1"
                    android:text="@string/lowpriority" />
            </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>
