<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="todo" type="id.ac.ubaya.informatika.a160418055_todoapp.model.Todo" />
        <variable name="radioListener" type="id.ac.ubaya.informatika.a160418055_todoapp.view.RadioClickListener" />
        <variable name="listener" type="id.ac.ubaya.informatika.a160418055_todoapp.view.ButtonAddTodoClickListener" />
        <variable name="listener_date" type="id.ac.ubaya.informatika.a160418055_todoapp.view.DateClickListener" />
        <variable name="listener_time" type="id.ac.ubaya.informatika.a160418055_todoapp.view.TimeClickListener" />
    </data>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.CreateTodoFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputNotes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/enternotes"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputTitle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtNotes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={todo.notes}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/todotitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtJudulTodo">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={todo.title}" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/txtJudulTodo"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/newtodo"
                    android:textSize="36sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btnAddTodo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="24dp"
                    android:onClick="@{listener::onButtonAddTodo}"
                    android:text="@string/addtodo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

                <TextView
                    android:id="@+id/textView"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/priority"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputNotes" />

                <RadioGroup
                    android:id="@+id/radioGroupPriority"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView">

                    <RadioButton
                        android:id="@+id/radioHigh"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="@{todo.priority==3?true:false}"
                        android:onClick="@{(view) -> radioListener.onRadioClick(view,3, todo)}"
                        android:tag="3"
                        android:text="@string/highpriority" />

                    <RadioButton
                        android:id="@+id/radioMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="@{todo.priority==2?true:false}"
                        android:onClick="@{(view) -> radioListener.onRadioClick(view,2, todo)}"
                        android:tag="2"
                        android:text="@string/mediumpriority" />

                    <RadioButton
                        android:id="@+id/radioLow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="@{todo.priority==1?true:false}"
                        android:onClick="@{(view) -> radioListener.onRadioClick(view,1, todo)}"
                        android:tag="1"
                        android:text="@string/lowpriority" />
                </RadioGroup>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputLayoutDate"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:hint="Pick a Date"
                    app:endIconDrawable="@drawable/ic_baseline_calendar_today_24"
                    app:endIconMode="custom"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroupPriority">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="true"
                        android:focusable="false"
                        android:onClick="@{listener_date::onDateClick}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:hint="Pick a Time"
                    app:endIconDrawable="@drawable/ic_baseline_access_time_24"
                    app:endIconMode="custom"
                    app:hintEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtInputLayoutDate">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="true"
                        android:focusable="false"
                        android:onClick="@{listener_time::onTimeClick}" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </FrameLayout>
</layout>
